# static-gallery

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DESIGN.md  ISSUES.md  NOTES.md  README.md  pyproject.toml  suggestions.md
example/: about.md  index.md  site.conf
example/.theme/shortcodes/: gallery.html
example/folder.md/: note.md
example/photos/: index.md
example/photos/home/: index.md
images/: generate.sh
src/static_gallery/: __init__.py  __main__.py  builder.py  cli.py  config.py  errors.py  freshness.py  index.py  markdown.py  metadata.py  model.py  node.py  nodes.py  paths.py  render.py  renderer.py  scanner.py  shortcodes.py  site.py  sync.py
src/static_gallery/themes/default/: _default.html  default.html  directory.html  gallery.html  image.html  page.html
src/static_gallery/themes/default/blocks/: footer.html  head.html  header.html
src/static_gallery/themes/default/codes/: gallery.html
src/static_gallery/themes/default/static/: styles.css
src/static_gallery/themes/default/static/css/: styles.css
tests/: conftest.py  helpers.py  test_builder.py  test_cli.py  test_config.py  test_index.py  test_markdown.py  test_metadata.py  test_node.py  test_renderer.py  test_scanner.py  test_shortcodes.py  test_site.py
theme/default/: _gallery.html
